Remove machine ssh_known_hosts clearing.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,7 +28,7 @@
 - name: Unconfigure guest (Redhat family).
   ansible.builtin.include_tasks:
     file: redhat.yml
-  when: ansible_os_family == "Redhat"
+  when: ansible_os_family == "RedHat"
 
 - name: Shutdown guest.
   community.general.shutdown:
