--- a/tasks/xen-guest-util.yml
+++ b/tasks/xen-guest-util.yml
@@ -1,12 +1,14 @@
 ---
 
 # Your VM must have the guest tools ISO mounted to proceed.
-- name: "Attempt to mount cdrom."
+- name: "Attempt to mount xe-guest-utilities iso."
   ansible.posix.mount:
     fstype: iso9660
+    opts: ro,noauto
     src: "{{ vmtemplate_cdrom_path }}"
     path: "{{ vmtemplate_cdrom_mount_path }}"
-    state: present
+    state: mounted
+    boot: false
 
 - name: "Run xe-guest-utilities install script."
   ansible.builtin.command:
@@ -21,3 +23,8 @@
     name: xe-linux-distribution.service
     state: started
     enabled: true
+
+- name: Unmount xe-guest-utilities iso.
+  ansible.posix.mount:
+    path: "{{ vmtemplate_cdrom_mount_path }}"
+    state: unmounted
