--- a/tasks/xen-guest-util.yml
+++ b/tasks/xen-guest-util.yml
@@ -13,8 +13,8 @@
 - name: "Run xe-guest-utilities install script."
   ansible.builtin.command:
     cmd: |
-      bash "{{ vmtemplate_cdrom_mount_path }}/Linux/install.sh"
-    creates: /etc/systemd/system/xe-linux-distribution.service
+      bash "{{ vmtemplate_cdrom_mount_path }}/Linux/install.sh" -n
+    creates: /etc/init.d/xe-linux-distribution
   register: __vmtemplate_install_status
   failed_when: __vmtemplate_install_status.rc != 0
 
