--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for vmtemplate
+
+- name: restart sshd
+  ansible.builtin.systemd:
+    name: sshd
+    state: restarted
+  become: true
